# terralux-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
src/: constants.rs  main.rs  plug.rs  state.rs  state_file.rs  sunrise_api.rs  time.rs  timer.rs  web.rs
src/api/: mod.rs
src/api/configuration/: get.rs  mod.rs  put.rs
src/api/configuration/today/: get.rs
src/api/plug/power/: get.rs  put.rs
src/timer/: day.rs  year.rs
