[package]
name = "terralux_backend"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = "0.7" # webserver
reqwest = { version = "0.12", features = ["json"] } # make http requests
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] } # async runtime
# logging
log = "0.4.27" # api
env_logger = "0.11.8" # implementation
# get current time with timezone
chrono    = "0.4"
chrono-tz = "0.10"
# (de)serialize to/from json
serde      = "1.0"
serde_json = "1.0"
# swagger ui / openapi documentation support for axum
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.1", features = ["axum", "vendored"] }
